# SmartDataTest

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run_integration_tests.bat
.github/workflows/: README.md  ci.yml  deploy.yml  nightly.yml  pr-checks.yml
docs/: AUTH.md  DEPLOYMENT.md
docs/archive/: list_tasks.md
docs/assets/: diagram-arch.md  diagram-zen.md  diagram.md
docs_to_import/: README.md
docs_to_import/rsl_oliveira2024/: 100-Scalable Approaches for Test Suite Reduction.txt  102-Quality Assurance in Big Data Analytics.txt  103-A study of software reliability on big data open source software.txt  106-Testing_and_Quality_Validation_for_AI_SoftwarePerspectives_Issues_and_Practices.txt  107-Industrial_track_Architecting_railway_KPIs_data_processing_with_Big_Data_technologies.txt  108 - Foundations of Data Quality Assurance for IoT-based Smart Applications 0.0.txt  12-Quality Model for Evaluating and Choosing a Stream Processing Framework Architecture.txt  14-Big Data Oriented Light-Load Embedded Performance Modeling.txt  16 - Data Quality Management for Big Data  Applications.txt  17-Research_on_Security_Detection_and_Data_Analysis_for_Industrial_Internet.txt  19-A Model-Driven Architectural Design Method for Big Data Analytics Applications.txt  2-The_Framework_of_Extracting_Unstructured_Usage_for_Big_Data_Platform.txt  25-Problem-of-Developing-Fault-Tolerant-High-Loaded.txt  27-Adapting the (Big) Data Science Engineering Process to the Application of Test Driven Development.txt  3 - Big_Data_Testing_Framework_for_Recommendation_Systems_in_e-Science_and_e-Commerce_Domains.txt  37-A Process Model for Test Driven Development in the Big Data.txt  41-SYNTHETIC FLIGHT TEST DATA FOR BIG DATA COMPUTING.txt  45-Big-Data-based-Testing-Characteristics-Challenges.txt  46-SIM-PIPE DryRunner An approach for testing.txt  48-Poc testing analysis of big data products.txt  5 - Analysis_on_the_Quality_Model_of_Big_Data_Software.txt  60-Regulatory_Mechanism_of_Financial_Market_Resource_.txt  62-A systematic quality assurance framework for the upgrade of radiation oncology information systems.txt  72-Testing MapReduce program using Induction Method.txt  74-Failure_Mode_Effect_Analysis_and_another_Methodolo.txt  (+9 more)
frontend/: .gitignore  package-lock.json  package.json
scripts/: build_rag_index.bat  build_rag_index.py
src/: api.py  llm_client.py
(+99 files in other folders)
